# rust-realestate-dashboard

./: .gitignore  AI_DEVELOPMENT_LOG.md  API.md  DEVELOPMENT.md  Dockerfile  FREE_TIER_OPTIMIZATION.md  FRONTEND_ENHANCEMENT_PLAN.md  GITHUB_PAGES_DEPLOYMENT.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STATUS.md  docker-compose.yml  render.yaml  run.sh  setup.sh
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  scrape.yml  scraper.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20240101000000_initial_schema.sql  20240101000001_seed_data.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/db/: mod.rs  queries.rs
backend/src/handlers/: market_data.rs  mod.rs  properties.rs  reminders.rs  scraper.rs  tenants.rs
backend/src/models/: event.rs  maintenance.rs  market.rs  market_data.rs  mod.rs  property.rs  reminder.rs  tenant.rs
backend/src/routes/: events.rs  maintenance.rs  market.rs  mod.rs  properties.rs  tenants.rs
backend/src/scraper/: mod.rs
frontend/: .env.production  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ActivityFeed.vue  CashFlowChart.vue  EventForm.vue  KpiCard.vue  MaintenanceForm.vue  Navigation.vue  PaymentHistoryChart.vue  PortfolioPerformanceChart.vue  PropertyForm.vue  PropertyStatusChart.vue  RentExpenseDonutChart.vue  RevenueExpenseChart.vue  TenantForm.vue  ThemeToggle.vue
frontend/src/router/: index.ts
(+21 files in other folders)
